[project]
name = "energymuffin-data-api"
version = "0.1.0"
description = "API for energy consumption forecasting and cost analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "pydantic>=2.0.0",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/energymuffin_data_api"]

[project.scripts]
start = "energymuffin_data_api:main"
